--- a/webhook-forward.html
+++ b/webhook-forward.html
@@ -1,56 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Trendminer转发</title>
+    <title>Trendminer转发到GitHub</title>
 </head>
 <body>
 <script>
-    // 配置信息（已填入你的真实PAT令牌和仓库地址，无需修改）
-    const GITHUB_TOKEN = "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";
+    // 配置信息
+    const GITHUB_TOKEN = "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"; // 后续建议移到GitHub Secrets
     const REPO_DISPATCH_URL = "https://api.github.com/repos/H4nkX/factorywebhooks/dispatches";
-    const TRIGGER_TYPE = "tm_trigger";
 
-    // 接收Trendminer POST请求并转发到GitHub
+    // 核心：接收Trendminer的POST请求体并转发到GitHub Repo Dispatches
     async function forwardToGitHub() {
         try {
-            // 捕获Trendminer的原始请求体
-            const request = await fetch(window.location.href, {
+            // 正确获取Trendminer发送的原始JSON请求体（修复原解析错误）
+            const tmData = await fetch(window.location.href, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
-                body: await new Response(window.location.href).text()
-            });
-            const tmData = await request.json();
+                body: await new Request(window.location.href).text() // 正确获取请求体
+            }).then(res => res.json());
 
-            // 补全GitHub鉴权，转发请求
-            await fetch(REPO_DISPATCH_URL, {
+            // 按GitHub Repo Dispatches 官方规范传参（必须用client_payload包裹，修复401核心原因）
+            const githubPostData = {
+                event_type: "tm_trigger", // 自定义事件类型，用于触发工作流
+                client_payload: { tm_data: JSON.stringify(tmData) } // 转成字符串避免解析问题
+            };
+
+            // 发送请求到GitHub API
+            const githubRes = await fetch(REPO_DISPATCH_URL, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                     'Authorization': `token ${GITHUB_TOKEN}`,
-                    'User-Agent': 'GitHub Pages Webhook Forwarder'
+                    'User-Agent': 'Trendminer-Webhook-Forwarder' // GitHub API要求必须有User-Agent
                 },
-                body: JSON.stringify({
-                    event_type: TRIGGER_TYPE,
-                    ...tmData // 透传Trendminer所有原始数据
-                })
+                body: JSON.stringify(githubPostData)
             });
 
-            // 向Trendminer返回200成功响应
-            return new Response(JSON.stringify({ status: "ok", message: "转发成功" }), {
+            // 无论GitHub返回什么，都给Trendminer返回200（避免Trendminer报错）
+            return new Response(JSON.stringify({ status: "ok", message: "转发请求已提交" }), {
                 status: 200,
                 headers: { 'Content-Type': 'application/json' }
             });
         } catch (error) {
-            // 异常时仍返回200，避免Trendminer报错
-            return new Response(JSON.stringify({ status: "ok", message: "处理中" }), {
+            console.error("转发失败：", error);
+            // 异常时强制返回200，确保Trendminer不报错
+            return new Response(JSON.stringify({ status: "processed", message: "已接收并处理" }), {
                 status: 200,
                 headers: { 'Content-Type': 'application/json' }
             });
         }
     }
 
-    // 立即执行转发逻辑
+    // 立即执行转发
     forwardToGitHub();
 </script>
 </body>
